fix: Wrap long item names in a max width

--- a/src/components/Modals/PublishWizardCollectionModal/ConfirmCollectionItemsStep/ConfirmCollectionItemsStep.css
+++ b/src/components/Modals/PublishWizardCollectionModal/ConfirmCollectionItemsStep/ConfirmCollectionItemsStep.css
@@ -80,6 +80,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 175px;
 }
 
 .ConfirmCollectionItemsStep .avatarColumn .avatarContainer .badge {
